# rendermatic

./: .dockerignore  .gitignore  CMakeLists.txt  NDI.md  README.md  SETUP-ALPINE.MD  WEBSOCKET-API.md  auth_manager.cpp  auth_manager.h  config.cpp  config.h  config.json  dfb_pure_renderer.cpp  dfb_pure_renderer.h  dfb_renderer.cpp  dfb_renderer.h  drm_egl_renderer.cpp  drm_egl_renderer.h  embedded_font.cpp  embedded_font.h  glfw_renderer.cpp  glfw_renderer.h  install.sh  irenderer.h  loader.cpp  loader.h  log.h  main.cpp  mdns_advertiser.cpp  mdns_advertiser.h  ndireceiver.cpp  ndireceiver.h  playlist_controller.cpp  playlist_controller.h  renderer.cpp  renderer.h  shell.nix  splash_controller.cpp  splash_controller.h  splash_screen.cpp  (+8 more)
.github/workflows/: release-images.yml
image/: AB_OTA_PLAN.md  Dockerfile  build.sh  flash.sh  mkimage.sh
image/rootfs/etc/: directfbrc  fstab  modules  motd
image/rootfs/etc/init.d/: data-mount  hostname-gen  rendermatic
image/rootfs/etc/logrotate.d/: rendermatic
image/rootfs/etc/modules-load.d/: rendermatic.conf
image/rootfs/etc/systemd/network/: 80-ethernet.network  80-wireless.network
image/rootfs/etc/systemd/system/: data-expand.service  data-mount.service  fb-fallback.service  hostname-gen.service  rendermatic-update.service  rendermatic-update.timer  rendermatic.service  wpa-supplicant-rendermatic.service
image/rootfs/usr/local/sbin/: data-expand.sh  data-mount.sh  fb-fallback.sh  hostname-gen.sh  ota-update.sh  wifi-start.sh
service/: rendermatic.initd  rendermatic.service
shaders/: fragment.glsl  vertex.glsl
